niciado frontend web para acesso às funções SAT
Toda a infraestrutura básica do frontend está implementada, incluindo login,
e acesso a algumas funções: ConsultarSAT, ConsultarStatusOperacional e
ExtrairLogs.

--- a/sathub/templates/index.html
+++ b/sathub/templates/index.html
@@ -1,7 +1,7 @@
-{% extends "base.html" %}
+{% extends "base-navbar.html" %}
 {% block content %}
       <div class="jumbotron">
-        <h1><strong>SATHub</strong></h1>
+        <h1><strong>{{ produto.nome }}</strong></h1>
         <p>Compartilhamento do equipamento SAT.<br/> Conecte mais de um ponto-de-venda a um único equipamento SAT</p>
         <p>
           <a class="btn btn-lg btn-primary" href="https://github.com/base4sistemas/sathub" role="button">Saiba mais &raquo;</a>
