--- a/sathub/templates/base.html
+++ b/sathub/templates/base.html
@@ -5,81 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="Projeto SATHub">
-    <meta name="author" content="Base4 Sistemas Ltda ME">
+    <meta name="description" content="Compartilhamento do equipamento SAT via RESTful API">
+    <meta name="author" content="Base4 Sistemas Ltda">
     <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">
-    <title>SATHub {{ product.version }}</title>
-
-    <!-- Bootstrap core CSS -->
+    <title>{{ produto.nome }} {{ produto.versao }}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap-3.3.5/css/bootstrap.min.css') }}" >
-
-    <!-- Custom styles for this template -->
-    <!-- <link rel="stylesheet" href="navbar.css" > -->
-
+    <link rel="stylesheet" href="{{ url_for('static', filename='custom.css') }}" >
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    {% block inside_head %}{% endblock %}
   </head>
-
   <body>
-
     <div class="container">
-
-      <!-- Static navbar -->
-      <nav class="navbar navbar-default">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="https://github.com/base4sistemas/sathub"><strong>SATHub {{ product.version }}</strong></a>
-          </div>
-          <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-              <li class="active"><a href="#">Início</a></li>
-              <li><a href="#">Sobre</a></li>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Funções SAT <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">ConsultarSAT</a></li>
-                  <li><a href="#">ConsultarStatusOperacional</a></li>
-                  <li><a href="#">ConsultarNumeroSessao</a></li>
-                  <li><a href="#">ExtrairLogs</a></li>
-                  <li role="separator" class="divider"></li>
-                  <li class="dropdown-header">Configuração do Equipamento</li>
-                  <li><a href="#">AtivarSAT</a></li>
-                  <li><a href="#">ComunicarCertificadoICPBRASIL</a></li>
-                  <li><a href="#">ConfigurarInterfaceDeRede</a></li>
-                  <li><a href="#">AssociarAssinatura</a></li>
-                  <li><a href="#">AtualizarSoftwareSAT</a></li>
-                  <li><a href="#">BloquearSAT</a></li>
-                  <li><a href="#">DesbloquearSAT</a></li>
-                  <li><a href="#">TrocarCodigoDeAtivacao</a></li>
-                </ul>
-              </li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-              <li><a href="#">Consultar SAT</a></li>
-              <li><a href="#">Status Operacional</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div><!--/.container-fluid -->
-      </nav>
-
-      {% block content %}{% endblock %}
-
-    </div> <!-- /container -->
-
-
+      {% block container_content %}{% endblock %}
+    </div> <!-- container -->
     <!-- Bootstrap core JavaScript -->
     <script src="{{ url_for('static', filename='jquery-1.11.3/jquery.min.js') }}"></script>
     <script src="{{ url_for('static', filename='bootstrap-3.3.5/js/bootstrap.min.js') }}"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="{{ url_for('static', filename='bootstrap-3.3.5/js/ie10-viewport-bug-workaround.js') }}"></script>
+    {% block custom_script %}{% endblock %}
   </body>
 </html>
