--- a/sathub/templates/funcao.html
+++ b/sathub/templates/funcao.html
@@ -5,8 +5,15 @@
   <p class="lead">{{ funcao.descricao }}</p>
 </div>
 
-<form action="{{ url_for('executar_funcao_sat', funcaosat=funcao.funcao|lower) }}" method="post">
+<form class="form-horizontal" method="post"
+    action="{{ url_for('executar_funcao_sat', funcaosat=funcao.funcao|lower) }}">
   {{ form.csrf_token }}
+  <div class="form-group">
+    {{ form.alias.label(class="col-sm-2 control-label") }}
+    <div class="col-sm-10">
+      {{ form.alias(class="form-control") }}
+    </div>
+  </div>
   <p>
     <button class="btn btn-primary" type="button" data-toggle="collapse"
       data-target="#collapseConfig" aria-expanded="false"
@@ -14,12 +21,10 @@
       <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
       Configurações
     </button>
-
     <button class="btn btn-danger" type="submit">
       <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
       Executar
     </button>
-
     <tt>{{ funcao.funcao }}</tt>
   </p>
 </form>
@@ -27,14 +32,21 @@
 <div class="collapse" id="collapseConfig">
   <div class="well">
     {% if current_user.is_authenticated %}
-      <p>Biblioteca <strong><tt>{{ sathubconf.caminho_dll }}</tt></strong>
-          {% if not sathubconf.is_biblioteca_existente %}
-            <span class="label label-danger">inexistente</span>
-          {% endif %}
-          <br/>
-          Convenção de Chamada <strong><tt>{{ sathubconf.convencao_chamada }}</tt> &ndash; {{ sathubconf.nome_convencao_chamada }}</strong><br/>
-          Código de Ativação <strong><tt>{{ sathubconf.codigo_ativacao }}</tt></strong></p>
-
+      {% for ep in conf.endpoints %}
+        <h3>Endpoint {{ loop.index }}</h3>
+        <p>Alias <strong><tt>{{ ep.alias }}</tt></strong> <em>{{ ep.descricao }}</em><br/>
+            Biblioteca <strong><tt>{{ ep.caminho_biblioteca }}</tt></strong>
+                {% if not ep.is_biblioteca_disponivel %}
+                  <span class="label label-danger">inexistente</span>
+                {% endif %}
+                <br/>
+            Convenção de Chamada <strong><tt>{{ ep.convencao_chamada }}</tt>
+                &ndash; {{ ep.nome_convencao_chamada }}</strong>
+                <br/>
+            Código de Ativação <strong><tt>{{ ep.codigo_ativacao }}</tt></strong>
+            </p>
+      {% endfor %}
+      <hr/>
       <p><small>Python {{ python_version }} | Flask {{ flask_version }}<br/>
           {{ platform_uname }}</small></p>
     {% else %}
