Reescrito módulo de configurações
Foi implementado um módulo de configurações mais robusto e com uma validação
mais eficiente, usando validação de schema via Python Cerberus.

O arquivo padrão de configurações teve o nome alterado de `conf.json` para
`config-sathub.json`. O caminho padrão para o arquivo de configurações ainda é
o diretório raiz do projeto, mas pode ser redefinido completamente através da
variável de ambiente `SATHUB_CONFIG_PATH`.

Nas configurações agora é possível descrever o equipamento SAT em uso.

Não há mais um arquivo de log padrão (era `sathub.log`). Agora o mecanismo de
logging pode ser configurado através do arquivo `config-log.json` cujo local
padrão é o diretório raiz do projeto, mas pode ser redefinido completamente
através da variável de ambiente `SATHUB_LOG_CONFIG_PATH`.

--- a/sathub/templates/funcao.html
+++ b/sathub/templates/funcao.html
@@ -27,14 +27,15 @@
 <div class="collapse" id="collapseConfig">
   <div class="well">
     {% if current_user.is_authenticated %}
-      <p>Biblioteca <strong><tt>{{ sathubconf.caminho_dll }}</tt></strong>
-          {% if not sathubconf.is_biblioteca_existente %}
+      <h3>{{ sathubconf.descricao }}</h3>
+      <p>Biblioteca <strong><tt>{{ sathubconf.caminho_biblioteca }}</tt></strong>
+          {% if not sathubconf.is_biblioteca_disponivel %}
             <span class="label label-danger">inexistente</span>
           {% endif %}
           <br/>
           Convenção de Chamada <strong><tt>{{ sathubconf.convencao_chamada }}</tt> &ndash; {{ sathubconf.nome_convencao_chamada }}</strong><br/>
           Código de Ativação <strong><tt>{{ sathubconf.codigo_ativacao }}</tt></strong></p>
-
+      <hr/>
       <p><small>Python {{ python_version }} | Flask {{ flask_version }}<br/>
           {{ platform_uname }}</small></p>
     {% else %}
